<resources>
    <string name="app_name">FletesMV</string>
    <string name="title_home">Bienvenida</string>
    <string name="title_dashboard">Traslados</string>
    <string name="title_notifications">Mapa</string>

    <string name="action_login">Iniciar Sesión</string>
    <string name="login_hint_password">Contraseña</string>
    <string name="login_hint_email">Mail</string>
    <string name="title_activity_login">Login</string>
    <string name="texto_registrarse">Aún no está registrado? Regístrese ahora!</string>

    <string name="title_activity_registro">Registro de Usuario</string>
    <string name="registrarse">Registrarse</string>
    <string name="action_confirmar_registro">Confirmar</string>
    <string name="bienvenida_registro">Registro de Usuario</string>
    <string name="registro_hint_nombre">Nombre</string>
    <string name="registro_hint_apellido">Apellido</string>
    <string name="registro_hint_mail">Mail</string>
    <string name="registro_hint_contrasena">Contraseña</string>

    <string name="title_Logout"> Cerrar Sesión</string>
    <string name="txt_logout">Cerrar Sesión</string>
    <string name="title_transporte">Traslados</string>
    <string name="texto_desde">Origen</string>
    <string name="texto_hasta">Destino</string>

    <string name="title_configuraciones">Configuraciones</string>
    <string name="conf_dias_noti_defecto">1</string>
    <string name="conf_dias_noti_titulo">Tiempo de Anticipación (días)</string>
    <string name="conf_dias_noti_key">conf_dias_noti</string>
    <string name="conf_dias_noti_summary">Será notificado %s días antes de cada traslado.</string>
    <string name="conf_categoria">Notificaciones</string>

    <string name="transporte_info_titulo">Traslado %s - %s</string>
    <string name="title_transporte_sin_datos">Traslado</string>
    <string name="title_transporte_vehiculo">Vehículo</string>
    <string name="iniciar_traslado_hint_vehiculo_marca">Marca</string>
    <string name="iniciar_traslado_hint_vehiculo_modelo">Modelo</string>
    <string name="iniciar_traslado_hint_vehiculo_matricula">Matrícula</string>
    <string name="iniciar_traslado_hint_vehiculo_chofer">Chofer</string>
    <string name="title_transporte_recepcion">Recepción</string>
    <string name="title_transporte_recepcion_nombre">Receptor</string>
    <string name="title_transporte_recepcion_observacion">Observación</string>
    <string name="title_transporte_recepcion_fecha">Fecha</string>
    <string name="title_mapa_transporte">Mapa Traslado</string>
    <string name="title_mapa_transporte_con_id">Traslado %s - %s</string>
    <string name="transportes_iniciar">Iniciar Traslado</string>
    <string name="transporte_info_boton_iniciar">Iniciar</string>
    <string name="title_iniciar_traslado">Iniciar Traslado</string>
    <string name="iniciar_traslado_titulo">Iniciar Traslado %s</string>
    <string name="texto_iniciar_traslado">Por favor, ingrese los datos del vehículo del traslado.</string>
    <string name="iniciar_traslado_boton_iniciar">Confirmar</string>
    <string name="transporte_info_boton_cargar">Cargar</string>
    <string name="transporte_info_boton_viajar">Viajar</string>
    <string name="transporte_info_boton_descargar">Descargar</string>
    <string name="transporte_info_boton_finalizar">Finalizar</string>
    <string name="title_finalizar_traslado">Formulario de Recepción</string>
    <string name="finalizar_traslado_boton_finalizar">Confirmar</string>
    <string name="finalizar_traslado_titulo">Finalizar Traslado %s</string>
    <string name="texto_finalizar_traslado">Por favor, ingrese los datos de la recepción.</string>
    <string name="finalizar_traslado_hint_nombre_receptor">Ingresar Nombre del Receptor</string>
    <string name="finalizar_traslado_hint_observacion">Ingresar Observación</string>
    <string name="title_transporte_vehiculo_marca">Marca</string>
    <string name="title_transporte_vehiculo_modelo">Modelo</string>
    <string name="title_transporte_vehiculo_matricula">Matrícula</string>
    <string name="title_transporte_vehiculo_chofer">Chofer</string>
    <string name="login_titulo">Login</string>
</resources>
