<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.bios.mv.fletesmv_v1.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_transporte"
        android:name="com.bios.mv.fletesmv_v1.ui.transporte.TransporteFragment"
        android:label="@string/title_transporte"
        tools:layout="@layout/fragment_transporte" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.bios.mv.fletesmv_v1.ui.mapa.MapaFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_mapa" />

    <fragment
        android:id="@+id/navigation_logout"
        android:name="com.bios.mv.fletesmv_v1.ui.logout.LogoutFragment"
        android:label="@string/title_Logout"
        tools:layout="@layout/fragment_logout" />
</navigation>