<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Titulo de la pantalla -->
        <TextView
            android:id="@+id/login_titulo"
            style="@style/Texto_Mediano"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_titulo"
            android:textAlignment="center" />

        <!--  Mail -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:errorTextAppearance="@style/texto_error"
            app:hintTextAppearance="@style/TextoHint">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/login_hint_email"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--  Contrasena -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:errorTextAppearance="@style/texto_error"
            app:hintTextAppearance="@style/TextoHint">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_hint_password"
                android:singleLine="true"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- android:imeOptions="actionDone"-->

        <!--  Boton Login -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/boton_login"
            style="@style/Boton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/action_login"
            android:textAlignment="center" />

        <!-- Texto explicativo -->
        <TextView
            android:id="@+id/texto_registrarse"
            style="@style/Texto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="20sp"
            android:text="@string/texto_registrarse"
            android:textSize="18sp"
            android:textAlignment="center"/>

        <!--  Boton Registrar -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/boton_registrarse"
            style="@style/Boton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/registrarse"
            android:textAlignment="center" />

    </LinearLayout>
</ScrollView>