<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/transporte_info_titulo"
            style="@style/Texto_Mediano"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:text="@string/title_transporte_sin_datos"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/transporte_info_transporte_cv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="4dp"
            card_view:cardUseCompatPadding="true"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/transporte_info_rl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/transporte_info_fecha"
                    style="@style/Titulo_Formulario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAlignment="center" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/transporte_info_texto_desde"
                            style="@style/Titulo_Formulario"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="15sp"
                            android:text="@string/texto_desde"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/transporte_info_origen_direccion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="45sp"
                            android:onClick="abrirMapaEnOrigen" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10sp">

                        <TextView
                            android:id="@+id/transporte_info_texto_hasta"
                            style="@style/Titulo_Formulario"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:layout_marginLeft="15sp"
                            android:layout_marginTop="15sp"
                            android:text="@string/texto_hasta" />

                        <TextView
                            android:id="@+id/transporte_info_destino_direccion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="35sp"
                            android:onClick="abrirMapaEnDestino" />

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/transporte_info_vehiculo"
            style="@style/Texto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_transporte_vehiculo"
            android:textAlignment="center"
            android:textSize="24sp"
            android:visibility="gone"
            android:layout_marginTop="10sp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/transporte_info_vehiculo_cv"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="4dp"
            card_view:cardUseCompatPadding="true"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/Titulo_Formulario"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/title_transporte_vehiculo_marca"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/transporte_info_vehiculo_marca"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="15sp"
                        android:textAlignment="center" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/Titulo_Formulario"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/title_transporte_vehiculo_modelo"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/transporte_info_vehiculo_modelo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="15sp"
                        android:textAlignment="center" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/Titulo_Formulario"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/title_transporte_vehiculo_matricula"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/transporte_info_vehiculo_matricula"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="15sp"
                        android:textAlignment="center" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/Titulo_Formulario"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/title_transporte_vehiculo_chofer"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/transporte_info_vehiculo_chofer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="15sp"
                        android:textAlignment="center" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/transporte_info_recepcion"
            style="@style/Texto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_transporte_recepcion"
            android:textAlignment="center"
            android:textSize="24sp"
            android:visibility="gone"
            android:layout_marginTop="10sp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/transporte_info_recepcion_cv"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="4dp"
            card_view:cardUseCompatPadding="true"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/Titulo_Formulario"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/title_transporte_recepcion_nombre"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/transporte_info_vehiculo_recepcion_nombre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="15sp"
                        android:textAlignment="center" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/Titulo_Formulario"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/title_transporte_recepcion_observacion"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/transporte_info_recepcion_observacion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="15sp"
                        android:textAlignment="center" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/Titulo_Formulario"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/title_transporte_recepcion_fecha"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/transporte_info_recepcion_fecha"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="15sp"
                        android:textAlignment="center" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/transporte_info_boton_iniciar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transporte_info_boton_iniciar"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:visibility="gone"
            style="@style/Boton"/>
    </LinearLayout>
</ScrollView>